added NLOPT_INSTALL bypass option

--- a/src/swig/CMakeLists.txt
+++ b/src/swig/CMakeLists.txt
@@ -46,8 +46,10 @@ if (NUMPY_FOUND AND PYTHONLIBS_FOUND)
     set_target_properties (${nlopt_python} PROPERTIES PREFIX "_")
   endif ()
 
-  install (FILES ${CMAKE_CURRENT_BINARY_DIR}/nlopt.py DESTINATION ${INSTALL_PYTHON_DIR})
-  install (TARGETS ${nlopt_python} LIBRARY DESTINATION ${INSTALL_PYTHON_DIR})
+  if(NLOPT_INSTALL)
+    install (FILES ${CMAKE_CURRENT_BINARY_DIR}/nlopt.py DESTINATION ${INSTALL_PYTHON_DIR})
+    install (TARGETS ${nlopt_python} LIBRARY DESTINATION ${INSTALL_PYTHON_DIR})
+  endif()
 endif ()
 
 
@@ -76,11 +78,13 @@ if (GUILE_FOUND AND (SWIG_VERSION VERSION_GREATER 2.0.9))
   swig_link_libraries (nlopt_guile ${nlopt_lib})
   target_link_libraries_with_dynamic_lookup (${nlopt_guile} ${GUILE_LIBRARIES})
 
-  file (RELATIVE_PATH _REL_GUILE_SITE_PATH ${GUILE_ROOT_DIR} ${GUILE_SITE_DIR})
-  set (GUILE_SITE_PATH ${_REL_GUILE_SITE_PATH})
-  install (FILES ${CMAKE_CURRENT_BINARY_DIR}/nlopt.scm DESTINATION ${GUILE_SITE_PATH})
+  if(NLOPT_INSTALL)
+    file (RELATIVE_PATH _REL_GUILE_SITE_PATH ${GUILE_ROOT_DIR} ${GUILE_SITE_DIR})
+    set (GUILE_SITE_PATH ${_REL_GUILE_SITE_PATH})
+    install (FILES ${CMAKE_CURRENT_BINARY_DIR}/nlopt.scm DESTINATION ${GUILE_SITE_PATH})
 
-  file (RELATIVE_PATH _REL_GUILE_EXTENSION_PATH ${GUILE_ROOT_DIR} ${GUILE_EXTENSION_DIR})
-  set (GUILE_EXTENSION_PATH ${_REL_GUILE_EXTENSION_PATH})
-  install (TARGETS ${nlopt_guile} LIBRARY DESTINATION ${GUILE_EXTENSION_PATH})
+    file (RELATIVE_PATH _REL_GUILE_EXTENSION_PATH ${GUILE_ROOT_DIR} ${GUILE_EXTENSION_DIR})
+    set (GUILE_EXTENSION_PATH ${_REL_GUILE_EXTENSION_PATH})
+    install (TARGETS ${nlopt_guile} LIBRARY DESTINATION ${GUILE_EXTENSION_PATH})
+  endif()
 endif ()
