--- a/src/api/CMakeLists.txt
+++ b/src/api/CMakeLists.txt
@@ -1,5 +1,5 @@
 
 # install man
-if (UNIX)
+if (NLOPT_INSTALL AND UNIX)
   install (FILES nlopt.3 nlopt_minimize.3 nlopt_minimize_constrained.3 DESTINATION ${INSTALL_MAN_DIR}/man3)
 endif ()
