--- a/src/octave/CMakeLists.txt
+++ b/src/octave/CMakeLists.txt
@@ -19,15 +19,17 @@ if (Matlab_FOUND AND Matlab_MX_LIBRARY)
     set_target_properties (nlopt_optimize-mex PROPERTIES LINKER_LANGUAGE CXX)
   endif ()
 
-  if (NOT DEFINED INSTALL_MEX_DIR)
-    set (INSTALL_MEX_DIR ${INSTALL_LIB_DIR}/matlab)
-  endif ()
-  install (TARGETS nlopt_optimize-mex DESTINATION ${INSTALL_MEX_DIR})
+  if(NLOPT_INSTALL)
+    if (NOT DEFINED INSTALL_MEX_DIR)
+      set (INSTALL_MEX_DIR ${INSTALL_LIB_DIR}/matlab)
+    endif ()
+    install (TARGETS nlopt_optimize-mex DESTINATION ${INSTALL_MEX_DIR})
 
-  if (NOT DEFINED INSTALL_M_DIR)
-    set (INSTALL_M_DIR ${INSTALL_MEX_DIR})
-  endif ()
-  install (FILES ${M_DATA} DESTINATION ${INSTALL_M_DIR})
+    if (NOT DEFINED INSTALL_M_DIR)
+      set (INSTALL_M_DIR ${INSTALL_MEX_DIR})
+    endif ()
+    install (FILES ${M_DATA} DESTINATION ${INSTALL_M_DIR})
+  endif()
 endif ()
 
 
@@ -48,14 +50,16 @@ if (OCTAVE_FOUND)
   octave_add_oct (nlopt_optimize SOURCES nlopt_optimize-oct.cc ${CMAKE_CURRENT_BINARY_DIR}/nlopt_optimize_usage.h LINK_LIBRARIES ${nlopt_lib})
   target_include_directories (nlopt_optimize PRIVATE ${OCTAVE_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR} ${PROJECT_SOURCE_DIR}/src/api)
 
-  if (NOT DEFINED INSTALL_OCT_DIR)
-    file (RELATIVE_PATH INSTALL_OCT_DIR ${OCTAVE_ROOT_DIR} ${OCTAVE_OCT_SITE_DIR})
-  endif ()
-  install (TARGETS nlopt_optimize DESTINATION ${INSTALL_OCT_DIR})
+  if(NLOPT_INSTALL)
+    if (NOT DEFINED INSTALL_OCT_DIR)
+      file (RELATIVE_PATH INSTALL_OCT_DIR ${OCTAVE_ROOT_DIR} ${OCTAVE_OCT_SITE_DIR})
+    endif ()
+    install (TARGETS nlopt_optimize DESTINATION ${INSTALL_OCT_DIR})
 
-  if (NOT DEFINED INSTALL_M_DIR)
-    file (RELATIVE_PATH INSTALL_M_DIR ${OCTAVE_ROOT_DIR} ${OCTAVE_M_SITE_DIR})
-  endif ()
+    if (NOT DEFINED INSTALL_M_DIR)
+      file (RELATIVE_PATH INSTALL_M_DIR ${OCTAVE_ROOT_DIR} ${OCTAVE_M_SITE_DIR})
+    endif ()
 
-  install (FILES ${M_DATA} DESTINATION ${INSTALL_M_DIR})
+    install (FILES ${M_DATA} DESTINATION ${INSTALL_M_DIR})
+  endif()
 endif ()
