added NLOPT_INSTALL bypass option

--- a/src/octave/CMakeLists.txt
+++ b/src/octave/CMakeLists.txt
@@ -17,11 +17,13 @@ if (Matlab_FOUND AND Matlab_MX_LIBRARY)
     set_target_properties (nlopt_optimize-mex PROPERTIES LINKER_LANGUAGE CXX)
   endif ()
 
-  set (NLOPT_INSTALL_MEXDIR ${NLOPT_INSTALL_LIBDIR}/matlab CACHE STRING "mex dir")
-  install (TARGETS nlopt_optimize-mex DESTINATION ${NLOPT_INSTALL_MEXDIR})
+  if(NLOPT_INSTALL)
+    set (NLOPT_INSTALL_MEXDIR ${NLOPT_INSTALL_LIBDIR}/matlab CACHE STRING "mex dir")
+    install (TARGETS nlopt_optimize-mex DESTINATION ${NLOPT_INSTALL_MEXDIR})
 
-  set (NLOPT_INSTALL_MDIR ${NLOPT_INSTALL_LIBDIR}/matlab CACHE STRING "m dir")
-  install (FILES ${M_DATA} DESTINATION ${NLOPT_INSTALL_MDIR})
+    set (NLOPT_INSTALL_MDIR ${NLOPT_INSTALL_LIBDIR}/matlab CACHE STRING "m dir")
+    install (FILES ${M_DATA} DESTINATION ${NLOPT_INSTALL_MDIR})
+  endif()
 endif ()
 
 
@@ -42,14 +44,16 @@ if (OCTAVE_FOUND)
   octave_add_oct (nlopt_optimize SOURCES nlopt_optimize-oct.cc ${CMAKE_CURRENT_BINARY_DIR}/nlopt_optimize_usage.h LINK_LIBRARIES ${nlopt_lib})
   target_include_directories (nlopt_optimize PRIVATE ${OCTAVE_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR} ${PROJECT_SOURCE_DIR}/src/api)
 
-  if (NOT DEFINED INSTALL_OCT_DIR)
-    file (RELATIVE_PATH INSTALL_OCT_DIR ${OCTAVE_ROOT_DIR} ${OCTAVE_OCT_SITE_DIR})
-  endif ()
-  install (TARGETS nlopt_optimize DESTINATION ${INSTALL_OCT_DIR})
+  if(NLOPT_INSTALL)
+    if (NOT DEFINED INSTALL_OCT_DIR)
+      file (RELATIVE_PATH INSTALL_OCT_DIR ${OCTAVE_ROOT_DIR} ${OCTAVE_OCT_SITE_DIR})
+    endif ()
+    install (TARGETS nlopt_optimize DESTINATION ${INSTALL_OCT_DIR})
 
-  if (NOT DEFINED INSTALL_M_DIR)
-    file (RELATIVE_PATH INSTALL_M_DIR ${OCTAVE_ROOT_DIR} ${OCTAVE_M_SITE_DIR})
-  endif ()
+    if (NOT DEFINED INSTALL_M_DIR)
+      file (RELATIVE_PATH INSTALL_M_DIR ${OCTAVE_ROOT_DIR} ${OCTAVE_M_SITE_DIR})
+    endif ()
 
-  install (FILES ${M_DATA} DESTINATION ${INSTALL_M_DIR})
+    install (FILES ${M_DATA} DESTINATION ${INSTALL_M_DIR})
+  endif()
 endif ()
