--- a/src/swig/CMakeLists.txt
+++ b/src/swig/CMakeLists.txt
@@ -41,8 +41,11 @@ if (Python_NumPy_FOUND)
   install (TARGETS nlopt_python DESTINATION ${INSTALL_PYTHON_DIR})
 
   configure_file (METADATA.in METADATA @ONLY)
-  install (FILES ${CMAKE_CURRENT_BINARY_DIR}/METADATA
-           DESTINATION ${INSTALL_PYTHON_DIR}/nlopt-${NLOPT_VERSION_STRING}.dist-info)
+
+  if(NLOPT_INSTALL)
+    install (FILES ${CMAKE_CURRENT_BINARY_DIR}/METADATA
+             DESTINATION ${INSTALL_PYTHON_DIR}/nlopt-${NLOPT_VERSION_STRING}.dist-info)
+  endif()
 endif ()
 
 
@@ -64,13 +67,14 @@ if (GUILE_FOUND)
   target_link_libraries (nlopt_guile ${GUILE_LIBRARIES})
   set_target_properties (nlopt_guile PROPERTIES COMPILE_FLAGS "${SWIG_COMPILE_FLAGS}")
 
-  file (RELATIVE_PATH _REL_GUILE_SITE_PATH ${GUILE_ROOT_DIR} ${GUILE_SITE_DIR})
-  set (GUILE_SITE_PATH ${_REL_GUILE_SITE_PATH})
-  install (FILES ${CMAKE_CURRENT_BINARY_DIR}/guile/nlopt.scm DESTINATION ${GUILE_SITE_PATH})
+  if(NLOPT_INSTALL)
+    file (RELATIVE_PATH _REL_GUILE_SITE_PATH ${GUILE_ROOT_DIR} ${GUILE_SITE_DIR})
+    set (GUILE_SITE_PATH ${_REL_GUILE_SITE_PATH})
+    install (FILES ${CMAKE_CURRENT_BINARY_DIR}/guile/nlopt.scm DESTINATION ${GUILE_SITE_PATH})
 
-  file (RELATIVE_PATH _REL_GUILE_EXTENSION_PATH ${GUILE_ROOT_DIR} ${GUILE_EXTENSION_DIR})
-  set (GUILE_EXTENSION_PATH ${_REL_GUILE_EXTENSION_PATH})
-  install (TARGETS nlopt_guile LIBRARY DESTINATION ${GUILE_EXTENSION_PATH})
+    file (RELATIVE_PATH _REL_GUILE_EXTENSION_PATH ${GUILE_ROOT_DIR} ${GUILE_EXTENSION_DIR})
+    set (GUILE_EXTENSION_PATH ${_REL_GUILE_EXTENSION_PATH})
+    install (TARGETS nlopt_guile LIBRARY DESTINATION ${GUILE_EXTENSION_PATH})?  endif()
 endif ()
 
 
